@@ -86,16 +86,9 @@ ruby_vm_destruct(rb_vm_t *vm)
 
 /* initialize API */
 struct rb_vm_options *rb_vm_options_init(struct rb_vm_options *opt);
+struct rb_vm_options *rb_vmptr_init_options(rb_vm_t *vm);
 
-static struct rb_vm_options *
-vm_init_options(rb_vm_t *vm)
-{
-    if (!vm->init_options) {
-	vm->init_options = malloc(sizeof(vm->init_options));
-	rb_vm_options_init(vm->init_options);
-    }
-    return vm->init_options;
-}
+#define vm_init_options(vm) rb_vmptr_init_options(vm)
 
 /*
  * ARGV
